# FileTask

./: .README.txt.kate-swp  .gitignore  CMakeLists.txt  config.txt  main.cpp  originCode.txt  packedCode.txt  packetCode.txt
libs/dataGen/: CMakeLists.txt  dataGen.cpp  dataGen.h
libs/dataGen/include/dataGen/: dataGen.h
libs/dataGen/sourse/: dataGen.cpp
libs/dataGen/test/: gen_test.cpp
libs/dataGen/test/config/: conf.cmake  correct_val_conf.txt  null_N_conf.txt  null_k_conf.txt  test_config.txt  test_gen_data.txt
libs/dataGеn/: CMakeLists.txt  dataGеn.cpp  dataGеn.h
libs/dataPack/: CMakeLists.txt
libs/dataPack/include/: ipacker.h  packerfactory.h
libs/dataPack/include/dataPack/: basepack.h  ipacker.h  magicprot.h  packerfactory.h  standartprot.h
libs/dataPack/source/: basepack.cpp  magicprot.cpp  packerfactory.cpp  standartprot.cpp
libs/dataPack/src/: basepack.h  dataPack.cpp  dataPack.h  packerfactory.cpp  randPack.cpp  randPack.h  randpack.h
libs/dataPack/test/: pack_test.cpp
libs/dataPack/test/config/: conf.cmake
libs/dataPack/test/config/aligned/: Mag.txt  Std_stars.txt
libs/dataPack/test/config/aligned/test/: Mag_MIX.txt  Std_MIX.txt
libs/dataPack/test/config/mix/: random_Mag_MIX.txt  random_Std_MIX.txt
libs/dataPack/test/config/no_mix/: random_Mag.txt  random_Std.txt
libs/dataPack/test/config/random/: Mag.txt  Mag_MIX.txt  Std.txt  Std_MIX.txt
libs/dataRead/: CMakeLists.txt  dataRead.cpp  dataRead.h
libs/dataRead/include/dataRead/: dataRead.h
libs/dataRead/source/: dataRead.cpp
libs/dataRead/test/: read_test.cpp
libs/dataRead/test/config/: conf.cmake
libs/dataRead/test/config/aligned/packed/: Mag_MIX.txt  Std_MIX.txt
libs/dataRead/test/config/bin2/toRead/packed/aligned/rand_lines/: Mag.txt
libs/dataRead/test/config/bin2/toRead/packed/aligned/rand_sym/: Std.txt
libs/dataRead/test/config/bin2/toRead/packed/aligned/twenty_enter/: Std.txt  Std_MIX.txt
libs/dataRead/test/config/bin2/toRead/packed/random/rand_sym/: Mag.txt  Mag_MIX.txt  Std.txt
libs/dataRead/test/config/random/packed/: Mag.txt  Std.txt
libs/dataRead/test/config/random/unpacked/: Mag.txt
libs/dataWrite/: CMakeLists.txt  dataWrite.cpp  dataWrite.h
libs/dataWrite/test/: write_test.cpp
libs/threadPool/: CMakeLists.txt
libs/threadPool/include/threadPool/: threadpool.h
libs/threadPool/sourse/: threadpool.cpp
libs/threadPool/test/: pool_test.cpp
libs/threadPool/test/config/: conf.cmake
libs/writer/: CMakeLists.txt  writer.cpp  writer.h
